Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 3.1.2
Date: not yet released
----------------------------------

Bug Fixes Since 3.1.1:

CAY-2084 ObjectIdQuery - no cache access polymorphism
CAY-2101 DataContext.currentSnapshot() doesn't set snapshot entity name
CAY-2137 When generating SQL from EJBQL, use "AND" to separate multiple join conditions
CAY-2175 AliasName used in EJBQLQuery is not working if it contains mixed case
CAY-2226 PK generation for Frontbase: PK cache size must be ignored
CAY-2276 PrePersist listener registered as PostPersist in LifecycleCallbackRegistry.addListener(Class<?>, LifecycleListener)

----------------------------------
Release: 3.1.1
Date: 16 May 2016
----------------------------------
Changes/New Features Since 3.1

CAY-1862 MySQL - allow specifying a length for TIMESTAMP and TIME columns
CAY-2042 Remove an arbitrary limitation on 1000 runtime DbRelationships

Bug Fixes Since 3.1:

CAY-1863 Make determining whether a particular database type supports length adapter-specific not universal
CAY-1964 Fix convertAdditionalDataMaps() in CayenneGeneratorMojo.java
CAY-1973 error while generating classes
CAY-1978 ESCAPE clause should be included in LIKE parenthesis
CAY-1979 Prefetches on Many-to-Many Relationships with Longvarchar
CAY-2047 Relationship mapping with target inheritance
CAY-2049 Changing the Relationship name in ObjRelationship Inspector has no effect
CAY-2066 Memory leak in ExtendedTypeMap for inner classes

----------------------------------
Release: 3.1-final
Date: 29 September 2014
----------------------------------
Changes/New Features Since 3.1RC1:

CAY-1952 Undeprecate ObjectContext.deleteObject(..)

Bug Fixes Since 3.1RC1:
